Create a base template and use tailwind@2 CDN.
TODO: use tailwind 3.
TODO: use nested templates with partial snippets.

--- a/01_lenslocked/templates/contact.tmpl.html
+++ b/01_lenslocked/templates/contact.tmpl.html
@@ -1,5 +1,9 @@
+{{ template "header" . }}
+
 <h1>Contact Page</h1>
 <p>
   To get in touch, send me an
   <a href="mailto:mustafa.hayati1992@gmail.com">email</a>.
 </p>
+
+{{ template "footer" . }}
