Configure tailwind to use tailwind 3 with CLI.

--- a/01_lenslocked/templates/tailwind.tmpl.html
+++ b/01_lenslocked/templates/tailwind.tmpl.html
@@ -5,10 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lenslocked</title>
-    <link
-      href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="/static/output.css" />
   </head>
   <body>
 {{ end }}
@@ -16,7 +13,6 @@
 <!-- page content -->
 <!-- TODO: replace this base template with a real nested template + partials
 (checkout snippetbox) -->
-<!-- TODO: use tailwind 3 -->
 
 {{ define "footer" }}
   </body>
