Fix serving static files and add some styles with tailwind.

--- a/01_lenslocked/templates/contact.tmpl.html
+++ b/01_lenslocked/templates/contact.tmpl.html
@@ -1,9 +1,10 @@
 {{ template "header" . }}
 
-<h1>Contact Page</h1>
-<p>
-  To get in touch, send me an
-  <a href="mailto:mustafa.hayati1992@gmail.com">email</a>.
-</p>
+<div class="px-6">
+  <h1 class="py-4 text-4xl font-semibold tracking-tight">Contact Page</h1>
+  <p class="text-gray-800">
+    To get in touch, send me an
+    <a class="underline" href="mailto:mustafa.hayati1992@gmail.com">email</a>.
+  </p>
 
 {{ template "footer" . }}
