--- a/01_lenslocked/templates/faq.tmpl.html
+++ b/01_lenslocked/templates/faq.tmpl.html
@@ -1,18 +1,18 @@
 {{ template "header" . }}
 
-<h1>FAQ</h1>
+<div class="px-6">
+  <h1 class="py-4 text-4xl font-semibold tracking-tight">FAQ</h1>
+  <ul class="grid grid-cols-2 gap-16">
+    {{- range . }}
+    {{- template "question" . -}}
+    {{- end -}}
+  </ul>
+</div>
+{{ template "footer" . }}
 
-<ul>
-  {{- range .}}
-  {{- template "questions" . -}}
-  {{- end -}}
-</ul>
-
-{{- define "questions" }}
-<li class="list-item">
-  Q: {{ .Question }}
-  A: {{ .Answer -}}
+{{- define "question" }}
+<li class="border-t border-indigo-400 py-1 px-2">
+  <span class="block text-lg text-gray-800 font-semibold"> Q: {{ .Question }} </span>
+  <span class="block text-sm text-gray-500"> A: {{ .Answer -}} </span>
 </li>
 {{- end }}
-
-{{ template "footer" . }}
