--- a/01_lenslocked/templates/signup.tmpl.html
+++ b/01_lenslocked/templates/signup.tmpl.html
@@ -1,4 +1,4 @@
-{{template "header" .}}
+{{ template "header" . }}
 <div class="py-12 flex justify-center">
   <div class="px-8 py-8 bg-white rounded shadow">
     <h1 class="pt-4 pb-8 text-center text-3xl font-bold text-gray-900">
@@ -15,8 +15,9 @@
           type="email"
           placeholder="Email address"
           required
+          value="{{ .Email }}"
           class="w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-800 rounded"
-          {{if not .Email}}autofocus{{end}}
+          {{ if not .Email }}autofocus{{ end }}
         />
       </div>
       <div class="py-2">
@@ -30,7 +31,7 @@
           placeholder="Password"
           required
           class="w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-800 rounded"
-          {{if .Email}}autofocus{{end}}
+          {{ if .Email }}autofocus{{ end }}
         />
       </div>
       <div class="py-4">
@@ -52,4 +53,4 @@
     </form>
   </div>
 </div>
-{{template "footer" .}}
+{{ template "footer" . }}
