--- a/01_lenslocked/templates/signin.tmpl.html
+++ b/01_lenslocked/templates/signin.tmpl.html
@@ -4,7 +4,7 @@
     <h1 class="pt-4 pb-8 text-center text-3xl font-bold text-gray-900">
       Welcome back
     </h1>
-    <form action="/users" method="POST">
+    <form action="/signin" method="POST">
       <div class="py-2">
         <label for="email" class="text-sm font-semibold text-gray-800">
           Email Address
