Consume the token and complete the process of resetting a password.

--- a/01_lenslocked/templates/reset_pw.tmpl.html
+++ b/01_lenslocked/templates/reset_pw.tmpl.html
@@ -4,7 +4,7 @@
     <h1 class="pt-4 pb-8 text-center text-3xl font-bold text-gray-900">
       Reset your password
     </h1>
-    <form action="/signin" method="POST">
+    <form action="/reset-pw" method="POST">
       <div class="hidden">
         {{ csrfField }}
       </div>
