--- a/01_lenslocked/templates/tailwind.tmpl.html
+++ b/01_lenslocked/templates/tailwind.tmpl.html
@@ -42,11 +42,11 @@
   {{ if errors }}
     <div class="px-2 py-4">
       {{ range errors }}
-        <div class="flex rounded bg-red-100 px-2 py-2 text-red-800 mb-2">
+        <div class="closeable flex rounded bg-red-100 px-2 py-2 text-red-800 mb-2">
           <div class="flex-grow">
             {{ . }}
           </div>
-          <a href="#">
+          <a href="#" onclick="closeAlert(event)">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
               <path stroke-linecap="round" stroke-linejoin="round" d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
             </svg>
@@ -63,6 +63,12 @@
 (checkout snippetbox) -->
 
 {{ define "footer" }}
+    <script>
+      function closeAlert(e) {
+        const closeable = e.target.closest(".closeable");
+        closeable.remove();
+      }
+    </script>
   </body>
 </html>
 {{ end }}
