--- a/01_lenslocked/templates/galleries/new.tmpl.html
+++ b/01_lenslocked/templates/galleries/new.tmpl.html
@@ -1,1 +1,35 @@
-<h1>Create a new gallery</h1>
+{{ template "header" . }}
+
+<!-- FIX: p-8 padding, and remove the inline style -->
+<div class="p-8 w-full" style="padding:2rem;">
+  <h1 class="pt-4 pb-8 text-3xl font-bold text-gray-800">Create a New Gallery</h1>
+  <form action="/galleries" method="POST">
+    <div class="hidden">
+      {{ csrfField }}
+    </div>
+    <div class="py-2">
+      <label for="title" class="text-sm font-semibold text-gray-800">
+        Title
+      </label>
+      <input
+        name="title"
+        id="title"
+        type="text"
+        placeholder="Gallery Title"
+        required
+        value="{{ .Title }}"
+        class="w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-800 rounded"
+        autofocus
+      />
+    </div>
+    <div class="py-4">
+      <button
+        type="submit"
+        class="py-2 px-8 bg-indigo-600 hover:bg-indigo-700 text-white rounded font-bold text-lg">
+        Create
+      </button>
+    </div>
+  </form>
+</div>
+
+{{ template "footer" . }}
