--- a/01_lenslocked/templates/galleries/new.tmpl.html
+++ b/01_lenslocked/templates/galleries/new.tmpl.html
@@ -1,7 +1,6 @@
 {{ template "header" . }}
 
-<!-- FIX: p-8 padding, and remove the inline style -->
-<div class="p-8 w-full" style="padding:2rem;">
+<div class="p-8 w-full">
   <h1 class="pt-4 pb-8 text-3xl font-bold text-gray-800">Create a New Gallery</h1>
   <form action="/galleries" method="POST">
     <div class="hidden">
