--- a/01_lenslocked/templates/contact.tmpl.html
+++ b/01_lenslocked/templates/contact.tmpl.html
@@ -6,5 +6,6 @@
     To get in touch, send me an
     <a class="underline" href="mailto:mustafa.hayati1992@gmail.com">email</a>.
   </p>
+</div>
 
 {{ template "footer" . }}
