--- a/01_lenslocked/templates/galleries/edit.tmpl.html
+++ b/01_lenslocked/templates/galleries/edit.tmpl.html
@@ -31,7 +31,7 @@
   </form>
   <div class="py-4">
     <h2>Dangerous Actions</h2>
-    <form action="/galleries/{{ .Id }}/delete" method="Post" onsubmit="return confirm('Do you want to delete this gallery?')">
+    <form action="/galleries/{{ .Id }}/delete" method="Post" onsubmit="return confirm('Do you really want to delete this gallery?')">
       <div class="hidden">
         {{ csrfField }}
       </div>
