--- a/01_lenslocked/templates/galleries/show.tmpl.html
+++ b/01_lenslocked/templates/galleries/show.tmpl.html
@@ -5,7 +5,7 @@
   <div class="columns-4 gap-4 space-y-4">
     {{ range .Images }}
     <div class="h-min w-full">
-      <a href="{{ . }}"><img src="{{ . }}" alt="kitten" class="w-full" /></a>
+      <a href="{{ . }}" target="_blank" ><img src="{{ . }}" alt="kitten" class="w-full" /></a>
     </div>
     {{ end }}
   </div>
