--- a/01_lenslocked/templates/galleries/show.tmpl.html
+++ b/01_lenslocked/templates/galleries/show.tmpl.html
@@ -5,8 +5,8 @@
   <div class="columns-4 gap-4 space-y-4">
     {{ range .Images }}
     <div class="h-min w-full">
-      <a href="/galleries/{{ .GalleryId }}/images/{{ .Filename }}" target="_blank" >
-        <img src="/galleries/{{ .GalleryId }}/images/{{ .Filename }}" alt="{{ .Filename }}" class="w-full" />
+      <a href="/galleries/{{ .GalleryId }}/images/{{ .FilenameEscaped }}" target="_blank" >
+        <img src="/galleries/{{ .GalleryId }}/images/{{ .FilenameEscaped }}" alt="{{ .Filename }}" class="w-full" />
       </a>
     </div>
     {{ end }}
