--- a/01_lenslocked/templates/galleries/edit.tmpl.html
+++ b/01_lenslocked/templates/galleries/edit.tmpl.html
@@ -35,6 +35,9 @@
     <div class="py-2 grid grid-cols-8 gap-2">
       {{ range .Images }}
       <div class="h-min w-full relative">
+        <div class="absolute top-1 right-2">
+          {{ template "delete_image_form" . }}
+        </div>
         <img src="/galleries/{{ .GalleryId }}/images/{{ .FilenameEscaped }}" alt="{{ .Filename }}" class="w-full" />
       </div>
       {{ end }}
@@ -57,3 +60,13 @@
 </div>
 
 {{ template "footer" . }}
+
+{{ define "delete_image_form" }}
+<form 
+  action="/galleries/{{ .GalleryId }}/images/{{ .FilenameEscaped }}/delete"
+  method="post"
+  onsubmit="return confirm('Do you rellay want to delete this image?');">
+  {{ csrfField }}
+  <button type="submit" class="p-1 text-xs text-red-100 bg-red-800 border rounded border-red-400">❌</button>
+</form>
+{{ end }}
